force-app/main/default/objects/Lead_WTA_Assignment__c/Lead_WTA_Assignment__c.object-meta.xml
<CustomObject>
    <label>Lead WTA Assignment_V1</label>
    <nameField>
        <label>Lead WTA Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead WTA Assignment_V1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>