force-app/main/default/objects/Lead_WTA_Assignment__c/fields/Monthly_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Assignments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Assignments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>