force-app/main/default/objects/Lead_WTA_Assignment__c/fields/Weekly_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Assignment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Weekly Assignment</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>