force-app/main/default/objects/Lead_WTA_Assignment__c/fields/Weekly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Limit__c</fullName>
    <label>Weekly Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>